Dockerize: API, Dashboard, MLflow, InfluxDB + healthchecks & volumes

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,28 @@
+# syntax=docker/dockerfile:1.7
 FROM python:3.11-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
 WORKDIR /app
-COPY api/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY api/ .
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+  && rm -rf /var/lib/apt/lists/*
+
+# Context is ./api, so don't prefix with "api/"
+COPY requirements.txt .
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r requirements.txt
+
+# Copy the rest of the API code (again: no "api/" prefix)
+COPY . .
+
+# Non-root
+RUN useradd -r -u 10001 appuser && chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
