--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,7 +1,24 @@
+# syntax=docker/dockerfile:1.7
 FROM python:3.11-slim
+
+ENV PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    STREAMLIT_BROWSER_GATHER_USAGE_STATS=false \
+    STREAMLIT_SERVER_PORT=8501
+
 WORKDIR /app
-COPY dashboard/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY dashboard/ .
+
+# Install dashboard dependencies (Streamlit + requests)
+COPY requirements.txt /app/requirements.txt
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r /app/requirements.txt
+
+# Copy dashboard source
+COPY . /app
+
+# Non-root user
+RUN useradd -r -u 10002 appuser && chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 8501
-CMD ["streamlit", "run", "app.py", "--server.address=0.0.0.0", "--server.port=8501"]
+CMD ["streamlit", "run", "app.py", "--server.address=0.0.0.0"]
