Add MLflow configuration and update compose file

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ API_PORT=8000
 DASHBOARD_PORT=8501
 MLFLOW_PORT=5000
 INFLUXDB_PORT=8086
+
+# ==== MLflow ====
+MLFLOW_TRACKING_URI=http://localhost:${MLFLOW_PORT}
+MLFLOW_EXPERIMENT_NAME=ForeWatt
