feat: Implement demand-side weather data pipeline
- Added `requirements.txt` with comprehensive dependencies for the project.
- Created `DemandWeatherFetcher` class for fetching and processing weather data from Open-Meteo API.
- Implemented caching and retry logic for API requests.
- Engineered demand-relevant features from national weather data.
- Developed methods for saving data in parquet format following medallion architecture.
- Added example usage and testing script to demonstrate functionality and validate improvements.
- Included logging for better traceability and debugging.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,22 @@
-# ==== InfluxDB ====
+# ══════════════════════════════════════════════════════════
+# EPİAŞ TRANSPARENCY PLATFORM
+# ══════════════════════════════════════════════════════════
+# Register at: https://www.epias.com.tr/en/transparency-platform/
+# Used by eptr2 library for electricity load and price data
+EPIAS_USERNAME=your_email@example.com
+EPIAS_PASSWORD=your_password_here
+
+# ══════════════════════════════════════════════════════════
+# OPEN-METEO WEATHER API
+# ══════════════════════════════════════════════════════════
+# No authentication required for free tier
+# Optional: configure base URLs if using custom endpoints
+OPENMETEO_BASE_URL=https://api.open-meteo.com/v1
+OPENMETEO_ARCHIVE_URL=https://archive-api.open-meteo.com/v1
+
+# ══════════════════════════════════════════════════════════
+# INFLUXDB (Time Series Database)
+# ══════════════════════════════════════════════════════════
 INFLUXDB_INIT_MODE=setup
 INFLUXDB_USERNAME=admin
 INFLUXDB_PASSWORD=your-password-here
@@ -7,12 +25,46 @@ INFLUXDB_BUCKET=epias
 INFLUXDB_RETENTION=0
 INFLUXDB_TOKEN=your-token-here
 
-# ==== Ports ====
+# ══════════════════════════════════════════════════════════
+# MLFLOW (Experiment Tracking & Model Registry)
+# ══════════════════════════════════════════════════════════
+MLFLOW_TRACKING_URI=http://localhost:5000
+MLFLOW_EXPERIMENT_NAME=ForeWatt
+MLFLOW_DEFAULT_ARTIFACT_ROOT=./mlflow
+
+# ══════════════════════════════════════════════════════════
+# SERVICE PORTS
+# ══════════════════════════════════════════════════════════
 API_PORT=8000
 DASHBOARD_PORT=8501
 MLFLOW_PORT=5000
 INFLUXDB_PORT=8086
 
-# ==== MLflow ====
-MLFLOW_TRACKING_URI=http://localhost:${MLFLOW_PORT}
-MLFLOW_EXPERIMENT_NAME=ForeWatt
+# ══════════════════════════════════════════════════════════
+# DATA PIPELINE CONFIGURATION
+# ══════════════════════════════════════════════════════════
+# Freshness threshold for serving forecasts (hours)
+DATA_FRESHNESS_THRESHOLD_HOURS=2
+
+# Bronze/Silver/Gold data directories
+DATA_DIR=./data
+BRONZE_DIR=./data/bronze
+SILVER_DIR=./data/silver
+GOLD_DIR=./data/gold
+
+# ══════════════════════════════════════════════════════════
+# FORECASTING CONFIGURATION
+# ══════════════════════════════════════════════════════════
+# Forecast horizons (hours)
+MIN_HORIZON=1
+MAX_HORIZON=24
+
+# Uncertainty quantification
+CONFORMAL_COVERAGE=0.90
+CONFORMAL_WINDOW_DAYS=28
+
+# ══════════════════════════════════════════════════════════
+# TIMEZONE
+# ══════════════════════════════════════════════════════════
+# Turkey does not observe DST (UTC+3 year-round)
+TIMEZONE=Europe/Istanbul
