--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,128 @@
+# ══════════════════════════════════════════════════════════
+# Python
+# ══════════════════════════════════════════════════════════
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# ══════════════════════════════════════════════════════════
+# Virtual Environments
+# ══════════════════════════════════════════════════════════
 .venv/
+venv/
+ENV/
+env/
+.virtualenv/
+
+# ══════════════════════════════════════════════════════════
+# Environment Variables & Secrets
+# ══════════════════════════════════════════════════════════
 .env
-data/
+.env.local
+*.key
+*.pem
+secrets/
+
+# ══════════════════════════════════════════════════════════
+# Data Directories (Medallion Architecture)
+# ══════════════════════════════════════════════════════════
+# Ignore actual data files but keep directory structure
+data/bronze/**/*
+data/silver/**/*
+data/gold/**/*
+data/unused/**/*
+
+# Keep directory structure with .gitkeep
+!data/bronze/.gitkeep
+!data/silver/.gitkeep
+!data/gold/.gitkeep
+!data/unused/.gitkeep
+
+# Preserve InfluxDB and MLflow volume mount directories
+data/influx/
+data/mlflow/
+
+# ══════════════════════════════════════════════════════════
+# MLflow
+# ══════════════════════════════════════════════════════════
 mlruns/
+mlflow/
 mlflow.db
+mlflow-artifacts/
+*.db-journal
+
+# ══════════════════════════════════════════════════════════
+# Jupyter Notebooks
+# ══════════════════════════════════════════════════════════
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# ══════════════════════════════════════════════════════════
+# IDE & Editor
+# ══════════════════════════════════════════════════════════
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 .claude/
+CLAUDE.md
+
+# ══════════════════════════════════════════════════════════
+# Testing & Coverage
+# ══════════════════════════════════════════════════════════
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# ══════════════════════════════════════════════════════════
+# Caching
+# ══════════════════════════════════════════════════════════
+.cache/
+*.cache
+
+# ══════════════════════════════════════════════════════════
+# Docker
+# ══════════════════════════════════════════════════════════
+*.log
+
+# ══════════════════════════════════════════════════════════
+# macOS
+# ══════════════════════════════════════════════════════════
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# ══════════════════════════════════════════════════════════
+# Windows
+# ══════════════════════════════════════════════════════════
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ══════════════════════════════════════════════════════════
+# Temporary Files
+# ══════════════════════════════════════════════════════════
+*.tmp
+*.temp
+~*
