Update docker-compose for per-user containers and add env example

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ INFLUXDB_PORT=8086
 # ==== MLflow ====
 MLFLOW_TRACKING_URI=http://localhost:${MLFLOW_PORT}
 MLFLOW_EXPERIMENT_NAME=ForeWatt
+
+# ==== Team-specific ====
+# Her kişi kendi adını burada doldurur
+USER_NAME=CHANGE_ME
