Update docker-compose for per-user containers and add env example

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,8 @@ CONFORMAL_WINDOW_DAYS=28
 # ══════════════════════════════════════════════════════════
 # Turkey does not observe DST (UTC+3 year-round)
 TIMEZONE=Europe/Istanbul
+
+# ══════════════════════════════════════════════════════════
+# USER CONFIGURATION (Each team member fills locally)
+# ══════════════════════════════════════════════════════════
+USER_NAME=CHANGE_ME
