feat: Add model caching and `--retrain` option to grid search, improve GPU memory management, correct DL prediction logic, and update NHITS config.

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,19 @@ mlflow_server.log
 # Model Training Artifacts
 # ══════════════════════════════════════════════════════════
 catboost_info/
+lightning_logs/
+models/**/*.pkl
+!models/.gitkeep
+
+# ══════════════════════════════════════════════════════════
+# Reports & Logs
+# ══════════════════════════════════════════════════════════
+reports/**/*.csv
+reports/**/*.json
+reports/**/*.log
+!reports/.gitkeep
+!reports/*/.gitkeep
+
 
 # ══════════════════════════════════════════════════════════
 # Jupyter Notebooks
